# centauri

./: .gitignore  CMakeLists.txt  CMakePresets.json  reflective_config.py  vcpkg-configuration.json  vcpkg.json
dotnet/: Centauri.sln
dotnet/Centauri/: Centauri.csproj  CentauriObject.cs  Class1.cs
dotnet/Centauri.SourceGenerators/: BindingsGenerator.cs  CallbacksTemplate.cs  Centauri.SourceGenerators.csproj  DeclarationFunctions.cs  FunctionDeclarationFunctions.cs  ManagedEntrypointsTemplate.cs  ScriptableClassTemplate.cs  StringFunctions.cs  Template.cs  TemplateHelper.cs  TestGenerator.cs
dotnet/Centauri.SourceGenerators/Converters/: DictionaryConverter.cs  UnixTimestampConverter.cs
dotnet/Centauri.SourceGenerators/Convertors/: DictionaryConverter.cs  UnixTimestampConverter.cs
dotnet/Centauri.SourceGenerators/Reflective/: Attribute.cs  ClassDeclaration.cs  ClassDeclarationTag.cs  ClassTemplateDeclaration.cs  Comment.cs  CommentBlock.cs  ConstructorDeclaration.cs  Database.cs  DatabaseLinker.cs  Declaration.cs  DeclarationClass.cs  DeclarationContext.cs  DeclarationLink.cs  DeclarationVisibility.cs  EnumDeclaration.cs  FieldDeclaration.cs  FunctionDeclaration.cs  MethodDeclaration.cs  NamespaceDeclaration.cs  RType.cs  RTypeHelper.cs  TypeKind.cs
dotnet/Centauri.SourceGenerators/Templates/: Callbacks.scriban  CallbacksTemplate.cs  ManagedEntrypoints.scriban  ManagedEntrypointsTemplate.cs  Placeholder.scriban  ScriptableClass.scriban  ScriptableClassTemplate.cs  Template.cs
dotnet/Centauri.Test/: Centauri.Test.csproj  Program.cs
src/centauri/: entity.cpp  entity.h  main.cpp
src/reflection/reflective_runtime/: attribute.cpp  attribute.h  class_constructor.cpp  class_constructor.h  class_constructor_spec.h  class_method.cpp  class_method.h  class_method_spec.h  class_property.cpp  class_property.h  class_property_spec.h  database.cpp  database.h  declaration.cpp  declaration.h  r_class.cpp  r_class.h  r_class_spec.h  r_class_template.cpp  r_class_template.h  r_enum.cpp  r_enum.h  r_enum_spec.h  reflective_core.cpp  reflective_core.h  type.cpp  type.h  type_enum.cpp  type_enum.h  type_spec.h
